Se creó con Colab

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKlLdi9koDKIhQkiBdd1YT",
+      "authorship_tag": "ABX9TyPTu/utoQQ7pA4mucNCSg/x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,56 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HuHYKu3bYSlk",
-        "outputId": "0adc9956-19e5-4541-e4b2-d85f275432db"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World\n"
-          ]
-        }
-      ],
       "source": [
-        "print(\"Hello World\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "input(\"What´s your name?\")\n",
-        "print(\"Hello Rodrigo\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0qfB1EYXeM4C",
-        "outputId": "070cc799-6a59-4f7f-80bc-2689bc6d6ebe"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "What´s your name?2\n",
-            "Hello Rodrigo\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "name = input(\"What´s your name?\")\n",
+        "#Question, remove whitspace from str, and capitalize name\n",
+        "name = input(\"What´s your name?\").strip().title()\n",
+        "first, last = name.split(\" \")\n",
         "print(\"Hello,\", name)"
       ],
       "metadata": {
@@ -85,16 +39,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9nC7POMnfpPU",
-        "outputId": "45b77b5f-de73-4b56-e3ae-c921734b699e"
+        "outputId": "2415fc46-0067-4c7a-8adf-d0a99e2da4d1"
       },
-      "execution_count": 19,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "What´s your name?Rodrigo\n",
-            "Hello, Rodrigo\n"
+            "What´s your name?Rodrigo fuentes\n",
+            "Hello, Rodrigo Fuentes\n"
           ]
         }
       ]
