Se creó con Colab

--- a/conditionals.ipynb
+++ b/conditionals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0tBEpwVkCFDtGCjLQCx83",
+      "authorship_tag": "ABX9TyM8pDlBx2q4kgX2MeAUA4al",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/RodrigoFuentesD03/harvard/blob/main/conditionals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if\n",
+        "#elif\n",
+        "#else"
+      ],
+      "metadata": {
+        "id": "zfmU6yHvhnt0"
+      },
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
